<resources>
    <string name="app_name">Capston_meeting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Ted Permission -->
    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>
    <string name="kakao_app_key">b7461141098ffb733be004789035edb8</string>
    <string name="msg_token_fmt">%s</string>
    <string name="Logout"><u>로그아웃</u></string>
    <string name="modify"><u>프로필 수정하기</u></string>
    <string name="confirm"><u>완료</u></string>

    <!-- board element -->
    <string name="title">title</string>
    <string name="tag1">tag1</string>
    <string name="tag2">tag2</string>
    <string name="tag3">tag3</string>
    <string name="location">location</string>
    <string name="date">date</string>
    <string name="num_type">num_type</string>
    <string name="age">age</string>
    <string name="gender">gender</string>
    <string name="nickname">nickname</string>

</resources>