<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_color"
    tools:context=".src.checkPage.receivePage.myDetailPage.MyDetailPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_detail_toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:theme="@style/ToolbarTheme"
            android:contentInsetLeft="0dp"
            android:contentInsetStart="0dp"
            android:background="#20294b"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            android:layout_marginBottom="1dp">

            <TextView
                android:id="@+id/my_detail_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="방 제목"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <HorizontalScrollView
                android:id="@+id/detail_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="90dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/my_detail_img1"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:scaleType="centerCrop"
                        app:riv_corner_radius="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"/>

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/my_detail_img2"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:scaleType="centerCrop"
                        app:riv_corner_radius="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"/>

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/my_detail_img3"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:scaleType="centerCrop"
                        app:riv_corner_radius="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"/>


                </LinearLayout>
            </HorizontalScrollView>


            <LinearLayout
                android:id="@+id/my_detail_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/detail_img"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/my_detail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"/>

                <TextView
                    android:id="@+id/my_detail_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nickname"/>

                <TextView
                    android:id="@+id/my_detail_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"/>

                <TextView
                    android:id="@+id/my_detail_num_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num_type"/>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/my_detail_tag1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/tag1"
                        android:textSize="10sp"/>
                    <TextView
                        android:id="@+id/my_detail_tag2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/tag2"
                        android:textSize="10sp"/>

                    <TextView
                        android:id="@+id/my_detail_tag3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/tag3"
                        android:textSize="10sp"/>

                </LinearLayout>
            </LinearLayout>


            <TextView
                android:id="@+id/my_detail_keyword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/my_detail_info"
                android:text="원하는 내용 기재"
                android:layout_margin="0dp"
                android:gravity="center"/>

            <Button
                android:id="@+id/my_detail_delete_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/my_detail_keyword"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="10dp"
                android:text="삭제하기"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</ScrollView>