<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_info_toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:theme="@style/ToolbarTheme"
            android:contentInsetLeft="0dp"
            android:contentInsetStart="0dp"
            android:background="#20294b"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            android:layout_marginBottom="1dp">

            <TextView
                android:id="@+id/my_info_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="내정보"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".src.myInfoPage.MyInfoPage"
            android:background="@drawable/background_color">

            <TextView
                android:id="@+id/my_info_modify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_margin="20dp"
                android:textColor="#ffffff"
                android:text="@string/modify"/>

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/my_info_image"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                app:riv_corner_radius="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="90dp"
                app:layout_constraintBottom_toTopOf="@id/my_info_profile"
                android:padding="20dp"/>

            <LinearLayout
                android:id="@+id/my_info_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/my_info_image"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="30dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="닉네임"
                        android:textColor="#000000"
                        android:layout_marginEnd="5dp"/>

                    <TextView
                        android:id="@+id/my_info_nickname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:text="@string/nickname"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="선호지역"
                        android:textColor="#000000"
                        android:layout_marginEnd="5dp"/>

                    <TextView
                        android:id="@+id/my_info_location1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:text="@string/location"/>

                    <TextView
                        android:id="@+id/my_info_location2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:text="@string/location"/>

                </LinearLayout>

                <Button
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:background="@drawable/round_button"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="80dp"
                    android:text="보유한 리본개수"
                    android:textColor="#ffffff"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="70dp"
                    android:elevation="10dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Logout"
                android:textColor="#ffffff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="20dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>